# CPURasterizer

./: .gitignore  README.md  install.bat  install.sh  linux_install.sh  windows_install.bat
Rasterizer/: CMakeLists.txt  Rasterizer.sln
Rasterizer/Assets/Shaders/: Quad.frag  Quad.vert
Rasterizer/CMake/: Dependencies.cmake
Rasterizer/Rasterizer/: CMakeLists.txt  Rasterizer.vcxproj  Rasterizer.vcxproj.filters  imgui.ini
Rasterizer/Rasterizer/src/: Config.h  Main.cpp  path.h
Rasterizer/Rasterizer/src/Assets/: Color4b.h  Material.h  Mesh.cpp  Mesh.h  SceneConfigs.h  Texture.cpp  Texture.h  Vertex.h
Rasterizer/Rasterizer/src/Engine/: Camera.cpp  Camera.h  Clipper.cpp  Clipper.h  ColorBuffer.cpp  ColorBuffer.h  Concurrency.h  DepthBuffer.cpp  DepthBuffer.h  Larrabee.h  LarrabeeRaasterizer.cpp  LarrabeeRasterizer.h  Pixel.h  Rasterizer.cpp  Rasterizer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Settings.h  SutherlandHodgman.cpp  SutherlandHodgman.h  Tile.h  Triangle.h
Rasterizer/Rasterizer/src/Engine/Antialising/: Antialising.h  FXAA.cpp  FXAA.h
Rasterizer/Rasterizer/src/Engine/Samplers/: Sampler.cpp  Sampler.h
Rasterizer/Rasterizer/src/Engine/Shaders/: Fragment.h  FragmentShader.h  VertexShader.h
Rasterizer/Rasterizer/src/HDR/: HDRLoader.cpp
Rasterizer/Rasterizer/src/ImGui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
Rasterizer/Rasterizer/src/Loader/: Loader.cpp
Rasterizer/Rasterizer/src/Math/: Math.h  Vec.h  Vec2.h  Vec3.h  Vec4.h
Rasterizer/Rasterizer/src/SIMD/: AVX.h  AVXBool.h  AVXCmp.h  AVXComp.h  AVXFloat.h  AVXInt.h  BoolAVX.h  FloatAVX.h  IntAVX.h  SSE.h  SSEBool.h  SSEFloat.h  SSEInt.h
Rasterizer/Rasterizer/src/Viewer/: Application.cpp  Application.h  Camera.cpp  Camera.h  Menu.cpp  Menu.h  Shader.h  Window.cpp  Window.h
